# KC_1039

arm_controller/: setup.py
arm_controller/arm_controller/: arm_manipulation.py  aruco_perception.py  bad_fruits_perception.py
ebot_controller/: setup.py
ebot_controller/ebot_controller/: shape_detector.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_controller/lib/arm_controller/: arm_manipulation  aruco_perception  bad_fruits_perception
install/arm_controller/share/arm_controller/: package.sh  package.xml
install/ebot_controller/lib/ebot_controller/: ebot_nav  shape_detector
install/ebot_controller/share/ebot_controller/: package.dsv  package.ps1  package.sh  package.xml
install/ebot_description/share/ebot_description/: package.sh
install/eyantra_warehouse/share/eyantra_warehouse/: package.sh
install/linkattacher_msgs/share/linkattacher_msgs/: package.sh
install/ur5_control/lib/ur5_control/: bonus_task2_boiler_plate.py  task1b_boiler_plate.py
install/ur5_control/share/ur5_control/: package.sh
install/ur_description/share/ur_description/: local_setup.sh  package.sh
install/ur_simulation_gz/share/ur_simulation_gz/: package.sh
